# AutoverseSimulator

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
measurements/h100_sxm/: run_20260426_233235.json
reports/: 01_methodology.md  01_validation.md  02_refinements.md  02_tier2.md  03_whatif.md  calibration_fit.json  data_schema.md  tier1_explained.md
scripts/: calibrate.py  collect_measurements.py  make_validation_plot.py  whatif.py
src/autoverse/: __init__.py  __main__.py  calibrate.py  cli.py  cost.py  hardware.py  measure.py  model.py  ops.py  report.py  simulator.py
tests/: test_calibrate.py  test_cost.py  test_measure.py  test_op_graph.py  test_ops_flops.py  test_simulator.py  test_smoke.py
