[project]
name = "autoverse"
version = "0.1.0"
description = "Analytical performance model for transformer inference on GPU-like accelerators"
readme = "README.md"
authors = [{ name = "Som Bagchi", email = "som@canopylabs.ai" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
# Installed only when measuring on a real GPU. Kept optional so CI stays CPU-only and quick.
measure = [
    "torch>=2.4",
]

[project.scripts]
autoverse = "autoverse.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoverse"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["autoverse"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# torch is an optional extra (`uv sync --extra measure`). CI installs without
# it, so mypy must not choke on the `import torch` inside measure.py.
[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
